--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,26 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
+
 default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: postgresql
+  encoding: unicode
+  # For details on connection pooling, see Rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  database: blog_api
+  username: vinyasbj
+  password: vinyasbj
+  host: 127.0.0.1
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: development_rent2guest
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: test_rent2guest
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: production_rent2guest
